# chora

./: CMakeLists.txt  README.md  comp.sh
docs/: ref.md
examples/: test01.ch  test01.ll  test02.ch  test02.ll  test03.ch  test03.ll  test04.ch  test04.ll  test05.ch  test05.ll  test06.ch  test07.ch  test07.ll
src/ast/: element.c  element.h
src/error/: handler.c
src/file/: buffer.c  buffer.h  coord.h  file.h
src/lexer/: token.h
src/llvm-ir/: codegen.h  item.c  operator.c  stmt_expr.c  stmt_expr.h
src/parser/: item.h  parser.c  parser.h  stmt_expr.c  util.c
src/src/: main.c
src/src/ast/: ast.c  ast.h  element.c  element.h  table.c  table.h
src/src/error/: handler.c  handler.h  style.h
src/src/file/: file.c
src/src/lexer/: lexer.c  lexer.h  token.c
src/src/llvm-ir/: codegen.c  item.h  operator.h
src/src/parser/: item.c  stmt_expr.c  stmt_expr.h  util.h
src/src/std/: types.h
src/src/std/map/: map.h  multimap.h
src/src/std/vector/: template.h
src/std/: string.c  string.h  vector.h
src/std/vector/: coord.h  u64.h
